[gd_scene load_steps=4 format=3 uid="uid://e3yibrklrx4e"]

[ext_resource type="Script" path="res://scripts/droppable_area.gd" id="1_opssj"]
[ext_resource type="Texture2D" uid="uid://bhdudxegliabk" path="res://Assets/Sprites/white-dot.png" id="2_gx1y6"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sbvau"]
size = Vector2(130, 130)

[node name="SwipeArea" type="Area2D"]
script = ExtResource("1_opssj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_sbvau")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.66893e-06, 2.38419e-07)
scale = Vector2(130, 130)
texture = ExtResource("2_gx1y6")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
